--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "husky": "^9.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
