--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "husky": "^9.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
